force-app/main/default/objects/Oportunidad__c/fields/PC_CUR_Venta__c.field-meta.xml
<CustomField>
    <fullName>PC_CUR_Venta__c</fullName>
    <label>Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>