force-app/main/default/objects/Oportunidad__c/fields/PC_PER_Probabilidad__c.field-meta.xml
<CustomField>
    <fullName>PC_PER_Probabilidad__c</fullName>
    <label>Probabilidad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>