force-app/main/default/objects/Oportunidad__c/fields/PC_REL_Cuenta_relacionada__c.field-meta.xml
<CustomField>
    <fullName>PC_REL_Cuenta_relacionada__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relaciona la oportunidad con una cuenta</description>
    <label>Cuenta relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>