force-app/main/default/objects/Oportunidad__c/fields/PC_SEL_Estado__c.field-meta.xml
<CustomField>
    <fullName>PC_SEL_Estado__c</fullName>
    <description>Describe el estado de la oportunidad creada</description>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calificación</fullName>
            </value>
            <value>
                <fullName>Proposición</fullName>
            </value>
            <value>
                <fullName>Negociación</fullName>
            </value>
            <value>
                <fullName>Oportunidad Ganada</fullName>
            </value>
            <value>
                <fullName>Oportunidad Perdida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>