force-app/main/default/objects/Oportunidad__c/fields/PC_SEL_Tipo__c.field-meta.xml
<CustomField>
    <fullName>PC_SEL_Tipo__c</fullName>
    <label>PC_SEL_Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negocio Existente</fullName>
            </value>
            <value>
                <fullName>Nuevo Negocio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>